--- a/workspace/ims-client/src/app/app.component.css
+++ b/workspace/ims-client/src/app/app.component.css
@@ -1,20 +1,28 @@
-body {
-    background-color: #FFFFFF;
-}
-
 .ui.menu .item img.logo {
     margin-right: 1.5em;
 }
 
+.ui.menu {
+    background-color: #ffffff;
+    border-bottom: solid 1px #c5d6de;
+}
+
 .main.container {
-    margin-top: 7em;
+    padding-top: 5em;
+    min-height: 100%;
+    padding-bottom: 60px;
+    box-sizing: border-box;
 }
 
 .wireframe {
     margin-top: 2em;
 }
 
-.ui.footer.segment {
-    margin: 5em 0em 0em;
-    padding: 5em 0em;
+.ui.footer {
+    background-color: #fff;
+    position: absolute;
+    margin-top: -50px;
+    left: 0;
+    width: 100%;
+    padding: 15px 0;
 }
