--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -1,30 +1,33 @@
-<h1>Anyone can see home</h1>
-<h1 class="ui header">You can try to go admin menu
-    <a class="item" [routerLink]="['/message']">Message</a> /
-    <a class="item" [routerLink]="['/parameter']">Parameter</a></h1>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
-<p>A text container is used for the main container, which is useful for single column layouts</p>
+<div class="ui grid">
+    <div class="eight wide column">
+        <div class="ui top attached header">
+            <span>Message</span>
+        </div>
+        <div class="ui attached segment">
+            <div class="ui form">
+                <div class="fields">
+                    <div class="sixteen wide field">
+                        <div class="ui grid">
+                            <div class="center aligned row">
+                                <div class="column">
+                                    <div class="ui mini button" (click)="showMessage()">
+                                        Default
+                                    </div>
+                                    <div class="ui mini positive button" (click)="showMessage('S')">
+                                        Success
+                                    </div>
+                                    <div class="ui mini negative button" (click)="showMessage('E')">
+                                        Error
+                                    </div>
+                                    <div class="ui mini blue button" (click)="showMessage('I')">
+                                        Into
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
