--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="ui borderless menu fixed">
     <div class="ui container">
         <a href="#" class="header item">
-            <img class="logo" src="assets/images/logo.png"> IMS
+            <img class="logo" src="assets/images/logo.png"> {{ 'APP_NAME' | translate }}
         </a>
         <a class="item" [routerLink]="['/home']" routerLinkActive="active">Home</a>
         <div class="ui simple dropdown item">
@@ -12,6 +12,12 @@
             </div>
         </div>
         <div class="right menu">
+            <div class="ui dropdown item"><i class="world icon"></i> Language <i class="dropdown icon"></i>
+                <div class="menu">
+                    <a class="item" (click)="changeToEnglish()">English</a>
+                    <a class="item" (click)="changeToThai()">Thai</a>
+                </div>
+            </div>
             <a class="item" *ngIf="!user" [routerLink]="['/login']">Login</a>
             <div class="item" *ngIf="user">{{user.username}}</div>
             <a class="item" *ngIf="user" (click)="logout()">Logout</a>
