--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -30,4 +30,28 @@
             </div>
         </div>
     </div>
+    <div class="eight wide column">
+        <div class="ui top attached header">
+            <span>Modal</span>
+        </div>
+        <div class="ui attached segment">
+            <p>TODO later</p>
+        </div>
+    </div>
+    <div class="eight wide column">
+        <div class="ui top attached header">
+            <span>Dropdown</span>
+        </div>
+        <div class="ui attached segment">
+            <div class="ui selection dropdown">
+                <input type="hidden" name="gender">
+                <i class="dropdown icon"></i>
+                <div class="default text">Gender</div>
+                <div class="menu">
+                    <div class="item" data-value="1">Male</div>
+                    <div class="item" data-value="0">Female</div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
