--- a/workspace/ims-client/src/app/buckwaframework/project/pages/message/message.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/message/message.html
@@ -59,7 +59,7 @@
                         <div class="ui mini primary button" [routerLink]="['/add-message']">
                             <i class="add icon"></i> Add Message
                         </div>
-                        <div class="ui mini disabled button">
+                        <div class="ui mini  button"   (click)="delete()">
                             <i class="trash icon"></i> Delete
                         </div>
                     </div>
