--- a/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/home/home.html
@@ -38,19 +38,91 @@
             <p>TODO later</p>
         </div>
     </div>
-    <div class="eight wide column">
+    <div class="sixteen wide column">
         <div class="ui top attached header">
             <span>Dropdown</span>
         </div>
         <div class="ui attached segment">
-            <div class="ui selection dropdown">
-                <input type="hidden" name="gender">
-                <i class="dropdown icon"></i>
-                <div class="default text">Gender</div>
-                <div class="menu">
-                    <div class="item" data-value="1">Male</div>
-                    <div class="item" data-value="0">Female</div>
+            <div class="ui form">
+                <div class="fields">
+                    <div class="four wide field">
+                        <label>Region</label>d
+                    </div>
+                    <div class="four wide field">
+                        <label>Country</label>d
+                    </div>
+                    <div class="four wide field">
+                        <label>Province</label>d
+                    </div>
+                    <div class="four wide field">
+                        <label>District</label>d
+                    </div>
                 </div>
+
+                <div class="fields">
+                    <div class="four wide field">
+                        <label>Region</label>
+                        <div class="ui selection dropdown">
+                            <input type="hidden" name="gender">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">Region</div>
+                            <div class="menu">
+                                <div class="item" data-value="1">Male</div>
+                                <div class="item" data-value="0">Female</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="four wide field">
+                        <label>Country</label>
+                        <div class="ui selection dropdown">
+                            <input type="hidden" name="gender">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">Country</div>
+                            <div class="menu">
+                                <div class="item" data-value="1">Male</div>
+                                <div class="item" data-value="0">Female</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="four wide field">
+                        <label>Province</label>
+                        <div class="ui selection dropdown">
+                            <input type="hidden" name="gender">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">Province</div>
+                            <div class="menu">
+                                <div class="item" data-value="1">Male</div>
+                                <div class="item" data-value="0">Female</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="four wide field">
+                        <label>District</label>
+                        <div class="ui selection dropdown">
+                            <input type="hidden" name="gender">
+                            <i class="dropdown icon"></i>
+                            <div class="default text">District</div>
+                            <div class="menu">
+                                <div class="item" data-value="1">Male</div>
+                                <div class="item" data-value="0">Female</div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="ui grid">
+                    <div class="right aligned row">
+                        <div class="column">
+                            <div class="ui mini button" (click)="showMessage()">
+                                Reset
+                            </div>
+                            <div class="ui mini positive button" (click)="showMessage('S')">
+                                Save
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
