--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -9,6 +9,7 @@
             <div class="menu">
                 <a class="item" [routerLink]="['/message']" routerLinkActive="active">Message</a>
                 <a class="item" [routerLink]="['/parameter']" routerLinkActive="active">Parameter</a>
+                <a class="item" [routerLink]="['/parameterGroup']" routerLinkActive="active">parameterGroup</a>
             </div>
         </div>
         <div class="right menu">
