--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -3,8 +3,8 @@
         <a href="#" class="header item">
             <img class="logo" src="assets/images/logo.png"> {{ 'APP_NAME' | translate }}
         </a>
-        <a class="item" [routerLink]="['/home']" routerLinkActive="active">Home</a>
-        <div class="ui simple dropdown item">
+        <a class="item" [routerLink]="['/home']" routerLinkActive="active" *ngIf="authService.getLogin()" >Home</a>
+        <div class="ui simple dropdown item" *ngIf="authService.getLogin()" >
             Administrator <i class="dropdown icon"></i>
             <div class="menu">
                 <a class="item" [routerLink]="['/message']" routerLinkActive="active">Message</a>
@@ -23,9 +23,9 @@
                     <div class="item" (click)="changeToThai()"><i class="th flag"></i> Thai</div>
                 </div>
             </div>
-            <a class="item" *ngIf="!user" [routerLink]="['/login']">Login</a>
-            <div class="item" *ngIf="user">{{user.username}}</div>
-            <a class="item" *ngIf="user" (click)="logout()">Logout</a>
+            <a class="item" *ngIf="!authService.getLogin()" [routerLink]="['/login']">Login</a>
+            <div class="item" *ngIf="authService.getLogin()">{{user.username}}</div>
+            <a class="item" *ngIf="authService.getLogin()" (click)="logout()">Logout</a>
         </div>
     </div>
 </div>
