--- a/workspace/ims-client/src/app/buckwaframework/project/pages/message/message-detail.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/message/message-detail.html
@@ -1,5 +1,5 @@
 <div class="ui grid">
-    <div class="eleven wide column">
+    <div class="wide column">
         <h2 class="ui header">{{title}}</h2>
         <div class="ui breadcrumb">
             <a class="section">Administrator</a>
@@ -17,22 +17,25 @@
                 <div class="fields">
                     <div class="six wide required field">
                         <label>Message Code</label>
-                        <input type="text" placeholder="Message Code" name="messageCode" [(ngModel)]="message.messageCode">
+                        <input type="text" placeholder="Message Code" name="messageCode">
                     </div>
                     <div class="two wide field"></div>
                     <div class="four wide required field">
                         <label>Message Type</label>
-                        <input type="text" placeholder="Message Type" name="messageType" [(ngModel)]="message.messageType">
+                        <select name="messageType" id="messageType" class="ui fluid search dropdown">
+                            <option value="">ALL</option>
+                            <option [value]="item.value" *ngFor="let item of messageTypes" >{{item.text}}</option>                         
+                        </select>
                     </div>
                 </div>
                 <div class="fields">
                     <div class="eight wide required field">
                         <label>Message Eng</label>
-                        <textarea name="messageEn" [(ngModel)]="message.messageEn"></textarea>
+                        <textarea name="messageEn"></textarea>
                     </div>
                     <div class="eight wide required field">
                         <label>Message Tha</label>
-                        <textarea name="messageTh" [(ngModel)]="message.messageTh"></textarea>
+                        <textarea name="messageTh"></textarea>
                     </div>
                 </div>
                 <div class="fields">
