--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -10,6 +10,7 @@
                 <a class="item" [routerLink]="['/message']" routerLinkActive="active">Message</a>
                 <a class="item" [routerLink]="['/parameter']" routerLinkActive="active">Parameter</a>
                 <a class="item" [routerLink]="['/parameterGroup']" routerLinkActive="active">parameterGroup</a>
+                <a class="item" [routerLink]="['/userManagement']" routerLinkActive="active">UserManamgement</a>
             </div>
         </div>
         <div class="right menu">
