--- a/workspace/ims-client/src/app/app.component.html
+++ b/workspace/ims-client/src/app/app.component.html
@@ -4,6 +4,7 @@
             <img class="logo" src="assets/images/logo.png"> {{ 'APP_NAME' | translate }}
         </a>
         <a class="item" [routerLink]="['/home']" routerLinkActive="active" *ngIf="authService.getLogin()">Home</a>
+        <a class="item" [routerLink]="['/analysis']" routerLinkActive="active" *ngIf="authService.getLogin()">วิเคราะห์ข้อมูลเบื้องต้น</a>
         <div class="ui simple dropdown item" *ngIf="authService.getLogin()">
             Administrator <i class="dropdown icon"></i>
             <div class="menu">
