--- a/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/result-analysis/result-analysis.component.html
@@ -1,6 +1,6 @@
 <div class="ui grid">
     <div class="sixteen wide column">
-        <h2 class="ui header">วิเคราะห์ข้อมูลเบื้องต้น</h2>
+        <h2 class="ui header">ผลการวิเคราะห์ข้อมูลเบื้องต้น</h2>
 
         <div class="ui top attached header">
             <span>Criteria</span>
@@ -21,14 +21,24 @@
                 </div>
 
                 <div class="fields">
+                    <div class="eight wide field"></div>
                     <div class="four wide field required">
-                        <label>รอบระยะเวลาการตรวจสอบ</label>
-                        <div class="ui calendar" id="example1">
-                            <div class="ui input left icon">
-                                <i class="calendar icon"></i>
-                                <input type="text" placeholder="MM/YYYY">
-                            </div>
-                        </div>
+                        <label>เลขที่วิเคราะห์</label>
+                        <input type="text">
+                    </div>
+                </div>
+
+                <div class="fields">
+                    <div class="ten wide field">
+                        <label>ผู้ประกอบการ</label>
+                        <input type="text" readonly="" class="custom-readonly" value="####################">
+                    </div>
+                </div>
+
+                <div class="fields">
+                    <div class="five wide field required">
+                        <label>ผู้ประกอบการ</label>
+                        <input type="text" class="custom-readonly">
                     </div>
                 </div>
 
