--- a/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
+++ b/workspace/ims-client/src/app/buckwaframework/project/pages/select-form/select-form.component.html
@@ -13,22 +13,22 @@
                 <div class="inline fields">
                     <div class="eight wide field ">
                         <label class="label25">ทะเบียนสรรพสามิต</label>
-                        <input type="text" placeholder="ทะเบียนสรรพสามิต">
+                        <input type="text" class="custom-readonly" placeholder="ทะเบียนสรรพสามิต" readonly="" value="2560-00178-5">
                     </div>
                     <div class="eight wide field ">
                         <label class="label20">เลขประจำตัวผู้เสียภาษี</label>
-                        <input type="text" placeholder="เลขประจำตัวผู้เสียภาษี">
+                        <input type="text" class="custom-readonly" placeholder="เลขประจำตัวผู้เสียภาษี" readonly="" value="1-5599-00168-99-6" >
                     </div>
                 </div>
 
                 <div class="inline fields">
                     <div class="eight wide field">
                         <label class="label25">ผู้ประกอบการ </label>
-                        <input type="text" placeholder="ผู้ประกอบการ">
+                        <input type="text" class="custom-readonly" placeholder="ผู้ประกอบการ" readonly=""  value="น้ำหอมเทสเตอร์ BB ราคาส่ง 30">
                     </div>
                     <div class="eight wide field ">
                         <label class="label20">เลขที่วิเคราะห์</label>
-                        <input type="text" placeholder="เลขที่วิเคราะห์">
+                        <input type="text" class="custom-readonly" placeholder="เลขที่วิเคราะห์" readonly="" value="000000000000">
                     </div>
                 </div>
             </div>
